Commit from Hack Club Spaces

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Welcome to my website❤️!</h1>
-    <p>Hi, Welcome to Really Great Site. My name is Chanel and I love tennis and baseball. I also love travelling and reading. My favourite meal is sushi, as a drink, boba, and finally dessert, ice cream.Oh, and TAYLOR!!!!</p>
+    <p>Hi, Welcome to Really Great Site. I love tennis and baseball. I also love travelling and reading. My favourite meal is sushi, as a drink, boba, and finally dessert, ice cream.Oh, and TAYLOR!!!!</p>
 </body>
     <a href="https://chatime.ca/">BOBA!!!!!!</a>
     <a href="https://www.mlb.com/">BASEBALL!!!!!!</a>
